monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/A0808.java
/* (c) https://github.com/MontiCore/monticore */
static constructor(){}
