monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0809/A0809.java
/* (c) https://github.com/MontiCore/monticore */
public protected constructor(){}
